Draft communication norms table

--- a/expectations.qmd
+++ b/expectations.qmd
@@ -34,7 +34,45 @@ Reminder to add norms regarding when to use email vs. Teams chat vs. Phone call 
 
 ![Four our inspiration - need to review, discuss as a team and revise for SWAMP needs](https://mmheadlines.org/wp-content/uploads/2022/03/Communication-Channel-Use-Norm-Chart.pdf){width="100%"}
 
-Anna Note: Recommend adding a row for co-working meetings and separating that from formal meetings (which is represented in the chart already)
+DRAFT - SWAMP Unit to Review and revise as appropriate
+
++-----------------+--------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
+| Tool            | When to Use                                                                                                              | Response Time                                                                                                                                                        | Suggested Norms                                                                                                                                 |
++=================+==========================================================================================================================+======================================================================================================================================================================+=================================================================================================================================================+
+| MS Teams Chat   | For short and simple conversations                                                                                       | Varies                                                                                                                                                               | Avoid complicated questions or conversations                                                                                                    |
+|                 |                                                                                                                          |                                                                                                                                                                      |                                                                                                                                                 |
+|                 | Daily check-ins                                                                                                          | If urgent - note that in message                                                                                                                                     |                                                                                                                                                 |
+|                 |                                                                                                                          |                                                                                                                                                                      |                                                                                                                                                 |
+|                 | When communicating with internal partners                                                                                |                                                                                                                                                                      |                                                                                                                                                 |
++-----------------+--------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
+| Email           | For sending semi-complex content, updates, announcements.                                                                | Within 3 business days                                                                                                                                               | Use identifiers in subject line                                                                                                                 |
+|                 |                                                                                                                          |                                                                                                                                                                      | for urgency and response                                                                                                                        |
+|                 | When you need a record of communication                                                                                  | If urgent - note that in message                                                                                                                                     | expectations                                                                                                                                    |
+|                 |                                                                                                                          |                                                                                                                                                                      |                                                                                                                                                 |
+|                 | Recap of important conversations                                                                                         |                                                                                                                                                                      |                                                                                                                                                 |
+|                 |                                                                                                                          |                                                                                                                                                                      |                                                                                                                                                 |
+|                 | When communicating with external partners                                                                                |                                                                                                                                                                      |                                                                                                                                                 |
++-----------------+--------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
+| Meetings        | For detailed, nuanced, complex communications that require feedback and/or discussion                                    | Schedule in advance                                                                                                                                                  | Make an agenda, share ahead of the meeting, and stick to it.                                                                                    |
+|                 |                                                                                                                          |                                                                                                                                                                      |                                                                                                                                                 |
+| (MS Teams)      | When you have specific topics to discuss                                                                                 | Respect the availability of others and schedule as soon as you know a meeting is needed - for most folks scheduling meetings 2-weeks (or more!) in advance is normal | The agenda can be formal or a few bullets - what's important is that there is a known purpose, priorities, and expected outcome for the meeting |
+|                 |                                                                                                                          |                                                                                                                                                                      |                                                                                                                                                 |
+|                 | When communicating with internal and/or external partners                                                                |                                                                                                                                                                      | If the meeting is recurring, cancel it if there is no need to meet and follow-up with an email/chat instead.                                    |
++-----------------+--------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
+| Meetings        | See above                                                                                                                | See above                                                                                                                                                            | Develop a formal agenda - send out at least 1 week prior to the meeting/webinar.                                                                |
+|                 |                                                                                                                          |                                                                                                                                                                      |                                                                                                                                                 |
+| (Zoom)          | Use zoom meetings when communicating with external partners                                                              |                                                                                                                                                                      |                                                                                                                                                 |
+|                 |                                                                                                                          |                                                                                                                                                                      |                                                                                                                                                 |
+|                 | Use zoom webinar for large, publicly facing events                                                                       |                                                                                                                                                                      |                                                                                                                                                 |
+|                 |                                                                                                                          |                                                                                                                                                                      |                                                                                                                                                 |
+|                 | [Meeting vs webinar comparison](https://support.zoom.us/hc/en-us/articles/115005474943-Meetings-and-webinars-comparison) |                                                                                                                                                                      |                                                                                                                                                 |
++-----------------+--------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
+| Co-working      | For brainstorming, screen-sharing, skill building, problem solving                                                       | Schedule as needed                                                                                                                                                   | Can have a pre-determined agenda or be informally and organically developed during the co-working session                                       |
++-----------------+--------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
+| Phone Call      | For time-sensitive, urgent communication                                                                                 | Respond to missed calls according to urgency, within 3 business days                                                                                                 | If you don't reach the person, leave a voicemail and/or follow-up with email or chat.                                                           |
++-----------------+--------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
+
+: Table of communication tools and their respective recommended use and norms
 
 ## Expectations of supervisors
 
