--- a/tech.qmd
+++ b/tech.qmd
@@ -6,7 +6,23 @@ Phew!
 
 See the [Onboarding chapter](https://cawaterboarddatacenter.github.io/swamp-manual/onboarding.html#equipment) for how to obtain your work computer & hardware. Your supervisor will help you with this process.
 
-## Remote desktop vs. VPN
+## Virtual Desktop vs. VPN
+
+If you are working remotely and need to access files on your personal network drive (H:) or a shared network drive (S:, R:) drive, you will need to safely connect to the Water Boards network via Virtual Desktop or virtual private network.
+
+**Virtual desktop** is... \[*work in progress*\]
+
+**Virtual private network (VPN)** is a mechanism for creating a secure connection between a device (such as your computer) and a computer network. The Water Boards uses the Global Protect VPN Client, which should be installed on your State-issued computer already. It can be found under the "Palo Alto Networks" folder in the Windows start menu. If you do not see it installed, contact the DIT Help Desk (help\@waterboards.ca.gov). Follow the step-by-step guide below for logging into the client.
+
+-   [How to Connect to Global Protect VPN Client](https://waternet.waterboards.ca.gov/dit/help_desk/docs/vpn_user_instructions.pdf) (*If you cannot access this document, reach out to a coworker and ask if they can send you a copy.*)
+
+## Multi-Factor Authentification
+
+Multi-Factor Authentification is required when accessing the Water Boards network through VPN, Virtual Desktop, or Office 365. Using the **Microsoft Authenticator app** is the quickest and easiest way to complete the login and verification process. Using this method requires that you download and install the Microsoft Authenticator app on your phone and tablet.
+
+-   [Multi-Factor Authentication (MFA) User Setup Guide](https://waternet.waterboards.ca.gov/dit/help_desk/docs/mfa_user_setup_guide.pdf) (*If you cannot access this document, reach out to a coworker and ask if they can send you a copy.*)
+
+If you cannot or do not want to use the Microsoft Authenticator app, contact the DIT Help Desk (help\@waterboards.ca.gov) to request a Physical Token that can be used instead of the app.
 
 ## Installing Printer(s)
 
@@ -75,11 +91,10 @@ Tableau is a business intelligence tool that can connect to and access data from
 
 **Tableau Software for Desktop**
 
--   Tableau Desktop is the full (or unrestricted) version of Tableau that can be installed onto one\'s state-issued laptop or desktop computer. Once installed, it can be run as a desktop application and visualizations can be published on either Tableau Public or Tableau Server. A limited number of Tableau Desktop licenses are available to Water Boards staff. These  licenses are named licenses only (not shared) and are tied to a specific user. Contact the DIT Help Desk at [help\@waterboards.ca.gov](mailto:help@waterboards.ca.gov) to request a license or contact Rafael Maestu ([Rafael.Maestu\@Waterboards.ca.gov](mailto:Rafael.Maestu@Waterboards.ca.gov)) in OIMA for further guidance. 
+-   Tableau Desktop is the full (or unrestricted) version of Tableau that can be installed onto one's state-issued laptop or desktop computer. Once installed, it can be run as a desktop application and visualizations can be published on either Tableau Public or Tableau Server. A limited number of Tableau Desktop licenses are available to Water Boards staff. These  licenses are named licenses only (not shared) and are tied to a specific user. Contact the DIT Help Desk at [help\@waterboards.ca.gov](mailto:help@waterboards.ca.gov) to request a license or contact Rafael Maestu ([Rafael.Maestu\@Waterboards.ca.gov](mailto:Rafael.Maestu@Waterboards.ca.gov)) in OIMA for further guidance. 
 
-```{=html}
 <!-- -->
-```
+
 -   Tableau Desktop Public Edition is the free version of Tableau Desktop that is available to all Water Boards staff. The software can be downloaded from the Tableau Public website ([Tableau Public Product Download](https://www.tableau.com/products/public/download)). If you run into any permissions issues trying to install the software package on your computer, you may need to request that the DIT Help Desk at [help\@waterboards.ca.gov](mailto:help@waterboards.ca.gov) install it for you. Compared to Tableau Desktop, Tableau Desktop Public Edition has a number of significant limitations (e.g., limited size and file type of data sources, inability to save Tableau workbooks to the desktop, inability to control access to the Tableau workbook or the underlying data), so it is likely only useful for evaluation purposes or projects with a very limited scope. 
 
 **Tableau Server**
@@ -94,9 +109,8 @@ Tableau is a business intelligence tool that can connect to and access data from
 
     -   Automation: Data visualizations and sources published on Tableau Server can be automatically refreshed on a time schedule.  
 
-```{=html}
 <!-- -->
-```
+
 -   **Limitations**:
 
     -   Tableau Server can be used to create data visualizations and dashboards like you would in Tableau Desktop or Tableau Desktop Public Edition.
@@ -113,9 +127,8 @@ Tableau is a business intelligence tool that can connect to and access data from
 
     -   Tableau Public: Requires a Tableau Public account. Free (self-registration). <https://public.tableau.com/>  
 
-```{=html}
 <!-- -->
-```
+
 -   Once a visualization is published on Tableau Server or Tableau Public (and configured for public sharing), then that visualization can be embedded into a Water Boards web page. 
 
 ::: callout-note
